hphp/hack/test/typecheck/reified_generics/reifiable3.php.exp
File "reifiable3.php", line 17, characters 14-15:
Invalid type (Typing[4322])
  File "reifiable3.php", line 16, characters 5-15:
  This type constant has the `__Reifiable` attribute
  File "reifiable3.php", line 14, characters 23-24:
  It cannot contain an abstract type constant without the __Reifiable attribute
